# stonks

./: ibapi-10.16.1-py3-none-any.whl
ibkr/: main.py
slurp/: '  .gitignore  Cargo.toml  README.md  get_ticker_caps.sh  hackt.sh  join.sql  print_candidates.sh  slurp_ticker.sh  ticker_mkt_cap.tsv  unavailable.conf  watchlist.sh
slurp/data/: ticker_exchange.sql
slurp/src/: app.rs  calc.rs  cli.rs  db.rs  main.rs  quote.rs  stoch.rs
